# worldcup-2026-simulator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.tr.md
.github/workflows/: ci.yml
data/: dc_params.json  international_results.csv
docs/superpowers/specs/: 2026-07-12-v0.2-design.md
examples/: argmin_smoke.rs  fit_dc.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/: BracketView.tsx  ForecastView.tsx  GroupTables.tsx  LiveStats.tsx  ResultsTable.tsx  ScenarioPrompt.tsx
scripts/: refresh_history.sh
src/: data.rs  dixoncoles.rs  handlers.rs  history.rs  lib.rs  llm.rs  main.rs  models.rs  odds.rs  piratings.rs  rate_limit.rs  scraper.rs  sim.rs  validation.rs
