[package]
name = "wc2026-sim"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tower-http = { version = "0.5", features = ["cors", "fs", "limit"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
scraper = "0.20"
regex = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
